--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        background: black;
+        background: transparent; /* or white */
       }
       video {
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: contain;  /* keeps proportions, no stretching */
       }
     </style>
   </head>
